# steps_ffmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/huoshan/mymusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/huoshan/mymusic/: MainActivity.java  MoveFileFromRaw2Sdcard.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/huoshan/mymusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/com/huoshan/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: AndroidLog.h  JavaListener.cpp  JavaListener.h  WlAudio.cpp  WlAudio.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlPlaystatus.cpp  WlPlaystatus.h  WlQueue.cpp  WlQueue.h  WlVideo.cpp  WlVideo.h  native-lib.cpp
myplayer/src/main/java/com/huoshan/myplayer/: WlTimeInfoBean.java
myplayer/src/main/java/com/huoshan/myplayer/listener/: WlOnCompleteListener.java  WlOnErrorListener.java  WlOnLoadListener.java  WlOnParparedListener.java  WlOnPauseResumeListener.java  WlOnTimeInfoListener.java
myplayer/src/main/java/com/huoshan/myplayer/log/: MyLog.java
myplayer/src/main/java/com/huoshan/myplayer/muteenum/: MuteEnum.java
myplayer/src/main/java/com/huoshan/myplayer/opengl/: WlGLSurfaceView.java  WlRender.java  WlShaderUtil.java
myplayer/src/main/java/com/huoshan/myplayer/player/: WlPlayer.java
myplayer/src/main/java/com/huoshan/myplayer/util/: WlTimeUtil.java
myplayer/src/test/java/com/huoshan/myplayer/: ExampleUnitTest.java
